--- a/js/reports/test.html
+++ b/js/reports/test.html
@@ -1,24 +1,11 @@
-<section id='rootDetailsSafeguars'>
-    <h4>Información general de la empresa</h4>
-
-    <p>Por favor, haga clic en la obra sobre la que desea obtener más información.</p>
-
-    <div id='rootCard-works'></div>
-</section>
-
-
-<section id="rootDetailsForehead">
-    <div class="container-closeForehead">
-        <button id="prevSectionWork">
-            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.86875 6.75L7.06875 10.95L6 12L0 6L6 0L7.06875 1.05L2.86875 5.25H12V6.75H2.86875Z" fill="#9E9E9E"/></svg>
+<tr>
+    <td>${name} ${firstLastName} ${secondLastName}</td>
+    <td>${shortName}</td>
+    <td>${workID}</td>
+    <td>${frontID}</td>   
+    <td id='${ employeeID }'>
+        <button class='editInformation__employee'>
+            Editar
         </button>
-
-        <h4>Información general de la obra</h4>
-    </div>
-
-    <h4>Información general de la empresa</h4>
-
-    <p>Por favor, haga clic en el frente sobre la que desea obtener más información.</p>
-
-    <div id='rootCard-forehead'></div>
-</section>
+    </td>            
+</tr>
